# minuit

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  configure.in
doc/: Makefile.am  Makefile.in
inc/: CMakeLists.txt  Makefile.am  Makefile.in
inc/Math/: Makefile.am  Makefile.in
inc/Minuit2/: ABObj.h  ABProd.h  ABSum.h  ABTypes.h  AnalyticalGradientCalculator.h  BasicFunctionGradient.h  BasicFunctionMinimum.h  BasicMinimumError.h  BasicMinimumParameters.h  BasicMinimumSeed.h  BasicMinimumState.h  CombinedMinimizer.h  CombinedMinimumBuilder.h  ContoursError.h  DavidonErrorUpdator.h  FCNBase.h  FCNGradientBase.h  FumiliBuilder.h  FumiliChi2FCN.h  FumiliErrorUpdator.h  FumiliFCNBase.h  FumiliGradientCalculator.h  FumiliMaximumLikelihoodFCN.h  FumiliMinimizer.h  FumiliStandardChi2FCN.h  FumiliStandardMaximumLikelihoodFCN.h  FunctionGradient.h  FunctionMinimizer.h  FunctionMinimum.h  GenericFunction.h  GradientCalculator.h  HessianGradientCalculator.h  InitialGradientCalculator.h  LASymMatrix.h  LAVector.h  LaInverse.h  LaOuterProduct.h  LaProd.h  LaSum.h  Makefile.am  (+66 more)
src/: AnalyticalGradientCalculator.cxx  BasicMinimumError.cxx  CMakeLists.txt  CombinedMinimumBuilder.cxx  DavidonErrorUpdator.cxx  FumiliBuilder.cxx  FumiliErrorUpdator.cxx  FumiliGradientCalculator.cxx  FumiliMinimizer.cxx  FumiliStandardChi2FCN.cxx  FumiliStandardMaximumLikelihoodFCN.cxx  HessianGradientCalculator.cxx  InitialGradientCalculator.cxx  LaEigenValues.cxx  LaInnerProduct.cxx  LaInverse.cxx  LaOuterProduct.cxx  LaSumOfElements.cxx  LaVtMVSimilarity.cxx  Makefile.am  Makefile.in  MnApplication.cxx  MnContours.cxx  MnCovarianceSqueeze.cxx  MnEigen.cxx  MnFcn.cxx  MnFumiliMinimize.cxx  MnFunctionCross.cxx  MnGlobalCorrelationCoeff.cxx  MnHesse.cxx  MnLineSearch.cxx  MnMachinePrecision.cxx  MnMinos.cxx  MnParabolaFactory.cxx  MnParameterScan.cxx  MnPlot.cxx  MnPosDef.cxx  MnPrint.cxx  MnScan.cxx  MnSeedGenerator.cxx  (+31 more)
test/: Makefile.in
test/MnSim/: DemoFumili.cxx  DemoGaussSim.cxx  FlatRandomGen.h  GaussDataGen.cxx  GaussDataGen.h  GaussFcn.cxx  GaussFcn.h  GaussFcn2.cxx  GaussFcn2.h  GaussFunction.h  GaussRandomGen.h  GaussianModelFunction.h  Makefile.am  Makefile.in  PaulTest.cxx  PaulTest2.cxx  PaulTest3.cxx  PaulTest4.cxx  ReneTest.cxx
test/MnTutorial/: Makefile.am  Makefile.in  Quad12F.h  Quad12FMain.cxx  Quad1F.h  Quad1FMain.cxx  Quad4F.h  Quad4FMain.cxx  Quad8F.h  Quad8FMain.cxx
