
set(Math_HDRS
         Math/Functor.h
         Math/IFunction.h
         Math/IFunctionfwd.h
	 Math/Minimizer.h
         Math/WrappedFunction.h)
             
install(FILES ${Math_HDRS} DESTINATION include/Math)

set(Minuit_HDRS
   Minuit2/ABObj.h
   Minuit2/ABProd.h
   Minuit2/ABSum.h
   Minuit2/ABTypes.h
   Minuit2/AnalyticalGradientCalculator.h
   Minuit2/BasicFunctionGradient.h
   Minuit2/BasicFunctionMinimum.h
   Minuit2/BasicMinimumError.h
   Minuit2/BasicMinimumParameters.h
   Minuit2/BasicMinimumSeed.h
   Minuit2/BasicMinimumState.h
   Minuit2/CombinedMinimizer.h
   Minuit2/CombinedMinimumBuilder.h
   Minuit2/ContoursError.h
   Minuit2/DavidonErrorUpdator.h
   Minuit2/FCNAdapter.h
   Minuit2/FCNBase.h
   Minuit2/FCNGradAdapter.h
   Minuit2/FCNGradientBase.h
   Minuit2/FumiliBuilder.h
   Minuit2/FumiliChi2FCN.h
   Minuit2/FumiliErrorUpdator.h
   Minuit2/FumiliFCNAdapter.h
   Minuit2/FumiliFCNBase.h
   Minuit2/FumiliGradientCalculator.h
   Minuit2/FumiliMaximumLikelihoodFCN.h
   Minuit2/FumiliMinimizer.h
   Minuit2/FumiliStandardChi2FCN.h
   Minuit2/FumiliStandardMaximumLikelihoodFCN.h
   Minuit2/FunctionGradient.h
   Minuit2/FunctionMinimizer.h
   Minuit2/FunctionMinimum.h
   Minuit2/GenericFunction.h
   Minuit2/GradientCalculator.h
   Minuit2/HessianGradientCalculator.h
   Minuit2/InitialGradientCalculator.h
   Minuit2/LaInverse.h
   Minuit2/LaOuterProduct.h
   Minuit2/LaProd.h
   Minuit2/LaSum.h
   Minuit2/LASymMatrix.h
   Minuit2/LAVector.h
   Minuit2/MatrixInverse.h
   Minuit2/MinimumBuilder.h
   Minuit2/MinimumError.h
   Minuit2/MinimumErrorUpdator.h
   Minuit2/MinimumParameters.h
   Minuit2/MinimumSeed.h
   Minuit2/MinimumSeedGenerator.h
   Minuit2/MinimumState.h
   Minuit2/MinosError.h
   Minuit2/Minuit2Minimizer.h
   Minuit2/MinuitParameter.h
   Minuit2/MnApplication.h
   Minuit2/MnConfig.h
   Minuit2/MnContours.h
   Minuit2/MnCovarianceSqueeze.h
   Minuit2/MnCross.h
   Minuit2/MnEigen.h
   Minuit2/MnFcn.h
   Minuit2/MnFumiliMinimize.h
   Minuit2/MnFunctionCross.h
   Minuit2/MnGlobalCorrelationCoeff.h
   Minuit2/MnHesse.h
   Minuit2/MnLineSearch.h
   Minuit2/MnMachinePrecision.h
   Minuit2/MnMatrix.h
   Minuit2/MnMigrad.h
   Minuit2/MnMinimize.h
   Minuit2/MnMinos.h
   Minuit2/MnParabola.h
   Minuit2/MnParabolaFactory.h
   Minuit2/MnParabolaPoint.h
   Minuit2/MnParameterScan.h
   Minuit2/MnPlot.h
   Minuit2/MnPosDef.h
   Minuit2/MnPrint.h
   Minuit2/MnRefCountedPointer.h
   Minuit2/MnReferenceCounter.h
   Minuit2/MnScan.h
   Minuit2/MnSeedGenerator.h
   Minuit2/MnSimplex.h
   Minuit2/MnStrategy.h
   Minuit2/MnTiny.h
   Minuit2/MnUserCovariance.h
   Minuit2/MnUserFcn.h
   Minuit2/MnUserParameters.h
   Minuit2/MnUserParameterState.h
   Minuit2/MnUserTransformation.h
   Minuit2/MnVectorTransform.h
   Minuit2/MPIProcess.h
   Minuit2/ModularFunctionMinimizer.h
   Minuit2/NegativeG2LineSearch.h
   Minuit2/Numerical2PGradientCalculator.h
   Minuit2/ParametricFunction.h
   Minuit2/ScanBuilder.h
   Minuit2/ScanMinimizer.h
   Minuit2/SimplexBuilder.h
   Minuit2/SimplexMinimizer.h
   Minuit2/SimplexParameters.h
   Minuit2/SimplexSeedGenerator.h
   Minuit2/SinParameterTransformation.h
   Minuit2/SqrtLowParameterTransformation.h
   Minuit2/SqrtUpParameterTransformation.h
   Minuit2/StackAllocator.h
   Minuit2/VariableMetricBuilder.h
   Minuit2/VariableMetricEDMEstimator.h
   Minuit2/VariableMetricMinimizer.h
   Minuit2/VectorOuterProduct.h)

install(FILES ${Minuit_HDRS} DESTINATION include/Minuit2)

